[package]
authors = ["Herbert Wolverson <herberticus@gmail.com>"]
edition = "2018"
name = "parent_delete_me"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "03_FirstGameFlappyAscii/flappy_dragon",
  "03_FirstGameFlappyAscii/flappy_bonus",
  "03_FirstGameFlappyAscii/flappy_player",
  "03_FirstGameFlappyAscii/flappy_states",
  "03_FirstGameFlappyAscii/hello_bterm",
  "05_BasicDungeonCrawler/dungeon_crawl_map",
  "05_BasicDungeonCrawler/dungeon_crawl_player",
  "05_BasicDungeonCrawler/dungeon_crawl_rooms",
  "05_BasicDungeonCrawler/dungeon_crawl_graphics",
  "06_EntitiesComponentsAndSystems/dungeonecs",
  "06_EntitiesComponentsAndSystems/playerecs",
  "07_TurnBasedGames/wandering",
  "07_TurnBasedGames/turnbased",
  "07_TurnBasedGames/intent",
  "08_HealthSimpleMelee/health",
  "08_HealthSimpleMelee/combat",
  "08_HealthSimpleMelee/healing",
  "09_WinningAndLosing/01_gauntlet",
  "09_WinningAndLosing/02_losing",
  "09_WinningAndLosing/03_winning",
  "10_WhatCanISee/01_fov",
  "10_WhatCanISee/02_eyesight",
  "10_WhatCanISee/03_memory",
  "11_MoreInterestingDungeons/01_traits",
  "11_MoreInterestingDungeons/02_traits_rooms",
  "11_MoreInterestingDungeons/03_cellular",
  "11_MoreInterestingDungeons/04_output_harness",
  "11_MoreInterestingDungeons/05_drunkard",
  "11_MoreInterestingDungeons/06_prefab",
  "12_MapTheming/themed",
  "13_InventoryAndPowerUps/01_potions_and_scrolls",
  "13_InventoryAndPowerUps/02_carrying_items",
  "14_DeeperDungeons/more_levels",
  "15_Loot/01_loot_tables",
  "15_Loot/02_better_combat",
]

[profile.release]
lto = "thin"
